Fixed bug with z-index of overlays that was breaking dialogs for errors and warnings after this last set of bug fixes.
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10659 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/pipeline/styles/pipelines.css
+++ b/website/pipeline/styles/pipelines.css
@@ -514,6 +514,10 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 	z-index: 3999 !important;
 }
 
+.ui-dialog {
+	z-index: 10001 !important;
+}
+
 .top-dialog {
 	z-index: 10001 !important;
 }
